--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -1,10 +1,8 @@
 
 
-<!-- <body> -->
+
     <app-adminnav></app-adminnav>
- <!-- side nav -->
- <!-- <br>
- <br> -->
+ 
     <div class="container2 d-flex justify-content-between ">
         <ul class="nav nav-tabs flex-column justify-content-center" id="myTab" role="tablist" *ngIf="isScreenSizeLargerThanThreshold">
 
@@ -12,7 +10,7 @@
 				<a class="nav-link  colorRed" id="doing-tab"  type="text" role="tab" aria-controls="doing" aria-selected="true" 
 				routerLink="/dash2"><br><a>
 					<img
-					src="../../assets/icons/logs.png"
+					src="../../assets/icons/dashboard.png"
 					height="35"
 					width="35"
 					/> <b> DASHBOARD</b></a></a>
