--- a/src/app/adminprogress/adminprogress.component.html
+++ b/src/app/adminprogress/adminprogress.component.html
@@ -1,14 +1,14 @@
 <app-adminnav></app-adminnav>
    <!-- <app-staff-navbar></app-staff-navbar>  -->
 
-   <div class="container2 d-flex justify-content-between ">
+<div class="container2 d-flex justify-content-between ">
     <ul class="nav nav-tabs flex-column justify-content-center" id="myTab" role="tablist" *ngIf="isScreenSizeLargerThanThreshold">
 
 			<li class="nav-item" role="presentation"   >
 				<a class="nav-link  " id="doing-tab"  type="text" role="tab" aria-controls="doing" aria-selected="true" 
 				routerLink="/dash2"><br><a>
 					<img
-					src="../../assets/icons/logs.png"
+					src="../../assets/icons/dashboard.png"
 					height="35"
 					width="35"
 					/> <b> DASHBOARD</b></a></a>
@@ -23,11 +23,7 @@
 					/> <b> VIEW LOGS</b></a></a>
 			</li>
 	
-			<!-- <li class="nav-item" role="presentation" id="doing-tab3">
-				<a class="nav-link colorAmber" id="progress-tab" data-bs-toggle="tab" data-bs-target="#progress" type="text"
-					role="tab" aria-controls="progress" aria-selected="false"><br><a><b>View LOGS</b></a></a>
-	
-			</li> -->
+			
 	
 			<li class="nav-item" role="presentation">
 				<a class="nav-link" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
@@ -93,12 +89,7 @@
   
                 <div class = "contentForm" >
                    
-                    <div class="departmenCategoryText">
-                        <h2></h2>
-                        <h4></h4>
-                        <h5></h5>
-                    </div>
-                    
+                   
                     <div class="content  mt-4 p-4">
   
                 
