--- a/src/app/admincloselog/admincloselog.component.css
+++ b/src/app/admincloselog/admincloselog.component.css
@@ -4,23 +4,52 @@
 
 
   /* Start of  Everything on the side nav*/
-  .sideNav {
+  .nav-tabs  {
+    position: center;
+    width: 100px;
+    height: 80%;
+    left: 2px;
     float: left;
-   
-    box-shadow: 5px 0 2px #969292;
-    /* width: 335px; */
-    height: 1055px;
+    width: 100%;
+    font-family: "Times New Roman";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 25px;
+    letter-spacing: 0.035em;
+    width: 280px;
     
-  }
-  .breadcrumbNav {
-    margin: 12% 10px;
-    padding: 20px 30px;      
-  }
-  #breadcrumbpadding {
+    left: -2px;
+    top: 110px;
+    
+    background: rgba(255, 255, 255, 0.8);
+   
+    }
+    .nav-item{
+      padding: 8px 24px;
+      
+      transition: 0.4s;
+      font-family: 'georgia';
+      margin-bottom: 24px;
+      margin-left: 24px;
+      font-weight: bold;
+      cursor: pointer;
+      background: white;
+      border-left: 8px solid rgb(14, 60, 90);
+    }
+    
+    .nav-item:hover {
+      
+      text-decoration: none;
+      padding: 8px 0;
+      
+     
+    }
+    
+    .nav-link.active {
+      border: none;
+    }
   
-    width: 120px;  
-    padding: 6px 0;
-  }
   a {
     padding-top: 20px;
     font-style: normal;
