--- a/src/app/adminpage/adminpage.component.css
+++ b/src/app/adminpage/adminpage.component.css
@@ -9,7 +9,7 @@ body {
 .nav-tabs  {
   position: center;
   width: 100px;
-  height: auto;
+  height: 80%;
   left: 2px;
   float: left;
   width: 100%;
@@ -19,7 +19,7 @@ body {
   font-size: 22px;
   line-height: 25px;
   letter-spacing: 0.035em;
-  width: 335px;
+  width: 280px;
   
   left: -2px;
   top: 110px;
@@ -52,28 +52,7 @@ body {
     border: none;
   }
 
-.sideNav {
-  float: left;
- 
-  box-shadow: 5px 0 2px #969292;
-  /* width: 335px; */
-  height: 1055px;
-  
-}
-.breadcrumbNav {
-  margin: 12% 10px;
-  padding: 20px 30px;      
-}
-#breadcrumbpadding {
 
-  width: 120px;  
-  padding: 6px 0;
-}
-#breadcrumbpaddingreport {
-
-  width: 120px;  
-  padding: 6px 0;
-}
 a {
   padding-top: 20px;
   font-style: normal;
@@ -86,14 +65,7 @@ a {
   color: #005596;
   text-decoration: none;
 }
-.breadcrumbNav ul {
-  list-style:none ;
-  flex-direction: column;
-}
-.breadcrumb-item.active {
-  border-bottom: 3px solid #005596;
-  width: 115px;  
-}
+
 .anchorBorder{
   margin:0 20%;
 }
