--- a/src/app/create-new-artisan/create-new-artisan.component.css
+++ b/src/app/create-new-artisan/create-new-artisan.component.css
@@ -2,85 +2,64 @@
 
 /* Start of the navigation bar*/
 
-.header {
-  height: 82px;
-  background: #0c0c0c;
+.container2{
+  
+  flex:1;
+}
+.nav-tabs  {
+  position: center;
+  width: 100px;
+  height: 80%;
+  left: 2px;
+  float: left;
   width: 100%;
-  margin: 0;
-  position: fixed;
-  font-family: 'Roboto Condensed',sans-serif;
-  font-size: 20px;
-  display: flex;
-  justify-content: space-between;
-  padding:0 16px 0 0;
-  box-sizing: border-box;
-  z-index: 100;
-  right:0px;
-}
-.header a {
-  padding: 0 32px;
-  color: rgb(227, 227, 233);
-  transition: 0.4s;
-}
-.header a:hover {
-  text-decoration: none;
-  color:#005596;
-}
-.header ul {
-  display: flex;
-  list-style: none;
-  justify-content: space-around;
-  align-items: center;
-  height: 100%;
-  margin: 0;
-}
-#logoDiv{
-
-  margin-left: 5%;
-  margin-top: 7.2px;
-
-}
-
-
+  font-family: "Times New Roman";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 25px;
+  letter-spacing: 0.035em;
+  width: 280px;
+  
+  left: -2px;
+  top: 110px;
+  
+  background: rgba(255, 255, 255, 0.8);
+ 
+  }
+  .nav-item{
+    padding: 8px 24px;
+    
+    transition: 0.4s;
+    font-family: 'georgia';
+    margin-bottom: 24px;
+    margin-left: 24px;
+    font-weight: bold;
+    cursor: pointer;
+    background: white;
+    border-left: 8px solid rgb(14, 60, 90);
+  }
+  
+  .nav-item:hover {
+    
+    text-decoration: none;
+    padding: 8px 0;
+    
+   
+  }
+  
+  .nav-link.active {
+    border: none;
+  }
 
 /*logout button*/
-.btn{
-  background-color:#eceef3 ;
 
-  border-radius: 5px;
-  height:50px;
-  color: black;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  font-weight: bold;
-  }
-.btn-success:active{
-  border: white;
-  background-color: #005596;
-}
 /* End of the navigation bar*/
 /* Start of  Everything on the side nav*/
-.sideNav {
-  float: left;
-  /* flex: 0 0 auto; */
-  box-shadow: 5px 0 2px #969292;
-  width: 335px;
-  height: 1055px;
-  
-}
 
 
 
-.breadcrumbNav {
-  margin: 12% 10px;
-  padding: 20px 30px;      
-}
-#breadcrumbpadding {
 
-  width: 120px;  
-  padding: 6px 0;
-}
 a {
   padding-top: 20px;
   font-style: normal;
@@ -93,27 +72,12 @@ a {
   color: #005596;
   text-decoration: none;
 }
-.breadcrumbNav ul {
-  
-  list-style:none ;
-  flex-direction: column;
-}
-.breadcrumb-item.active {
-  border-bottom: 3px solid #005596;
-  width: 115px;  
-  text-align: center;
-}
-.breadcrumb-item a {
-  
-  text-align: center;
-}
 
+  
+ 
 /* End of Everything on the side nav*/
 
-/*Disable the active link*/
-a:disabled, a[disabled] {
-  color: #005596;
-}
+
 .anchorBorder{
   margin:0 20%;
 }
@@ -137,106 +101,19 @@ a:disabled, a[disabled] {
   border-left: 8px solid rgb(14, 60, 90);
 }
 /*SideNav content on the left*/
-.container2{
-  margin-top: 3.8%;
-}
+
 /*Div for the content on the right*/
 .tab-content {
-    margin-top: -10%;
+    margin-top: 5%;
     float: right;
     width: 100%;
     margin-right: 10%;
-    margin-left: 10%;
+    /* margin-left: 10%; */
   }
-  /*Footer*/
-footer{
-    background: black;
-    padding: 8px;
-    color: #eee;
-    text-align: center;
-    margin-left: 0%;
-    margin-top: auto;
-    width: 100%;
-    height: 40px;
-    /* position: absolute; */
-    /* bottom: 0;
-    width: 100%; */
-  }
-  .nav-tabs {
-    position: center;
-    width: 335px;
-    height: 600px;
-    left: 2px;
-    float: left;
-    width: 100%;
-    
-  top:50%;  
-  transform: translateY(-50%);
-    
-    background: rgba(155, 154, 154, 0.8);
-    border-right: 5px solid #0e0f52;
-    
-    
-    }
-    
-    .nav-item{
-      padding: 8px 24px;
-      
-      transition: 0.4s;
-      font-family: 'georgia';
-      margin-bottom: 24px;
-      margin-left: 24px;
-      font-weight: bold;
-      cursor: pointer;
-      background: white;
-    }
-    
-    .nav-item:hover {
-      
-      text-decoration: none;
-      padding: 8px 0;
-      border-left: 8px solid rgb(14, 60, 90);
-      box-shadow: 4px 4px 4px rgba(70, 69, 69, 0.993);
-    }
-    
-    
-    .nav-link.active {
-      border: none;
-    }
-    
+
   
   
-.table {
-    width: 90%;
-    margin: auto auto;
-  }
-select#Cater,input.form-control {
-    width: 100%;
-    padding: 0 0;
-    border-radius: 0.25rem;
-  }
-.content{
-  overflow-y: scroll;
-  height: auto; 
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
-  padding: 20px;
-  width: 85%;
-  margin: auto auto;
-}
-.status {
-      background-color: #7F4D3E;
-      color: white;
-}
-.btn-success{
-  color: white;
-  border: 2px solid white;
-  height: 40px;
-  background-color: #005596;
-}
-.btn-success:active{
-  border: white;
-  background-color: #005596;
-}
+
 
 .reqhead1{
   
