--- a/src/app/create-new-artisan/create-new-artisan.component.html
+++ b/src/app/create-new-artisan/create-new-artisan.component.html
@@ -1,51 +1,111 @@
-<div class="container-fluid">
-    <!-- <body class="container"> -->
-    <div class="log d-flex justify-content-end">
-        <nav class="header">
-            <div id="logoDiv">
-                <a>
+<app-adminnav></app-adminnav>
 
-                    <img class="logo" src="../../../assets/images/tut.png" alt="SMART FARM"
-                        style="float: left;height: 70px;width: 225px;" routerLink="read">
-                </a>
-            </div>
-            <div id="menu-icon">
-                <i class="fas fa-bars"></i>
-            </div>
-            <ul>
-                <li>
-
-                    <a href="#" class="nav-link active" id="ModalExample" (click)="logout()"><button type="button"
-                            class="btn ">LOGOUT</button></a>
-                </li>
-            </ul>
-        </nav>
+  <!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Request</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="close" (click)="doSomething()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body" *ngIf="boolmsg" class="alert alert-success" role="alert">
+            <strong>{{successmsg}}</strong>
+        </div>
+        <div class="modal-footer" >
+          <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+          <button type="button" class="btn btn-primary" (click)="doSomething()"   id="close">OK</button>
+        </div>
+      </div>
     </div>
 </div>
 
-<body>
 
 
-    <div class="container2 d-flex justify-content-between ">
-        <div class="sideNav">
-            <nav class="breadcrumbNav">
-                <ul>
 
-                    <li class="" id="breadcrumbpadding"><a class="" id="hover" routerLink="/adminpage">View Logs</a>
-                    </li>
-                    <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="" disabled>create new
-                            tech</a></li>
-                </ul>
-            </nav>
-        </div>
+<div class="container2 d-flex justify-content-between ">
+    <ul class="nav nav-tabs flex-column justify-content-center" id="myTab" role="tablist" *ngIf="isScreenSizeLargerThanThreshold">
+        <li class="nav-item" role="presentation">
+            <a class="nav-link colorAmber" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
+                routerLink="/dash2">
+                <br><a><img
+                    src="../../assets/icons/dashboard.png"
+                    height="35"
+                    width="35"
+                    /><b>DASHBOARD</b></a></a>
+
+        </li>
+        <li class="nav-item" role="presentation"   >
+            <a class="nav-link  colorRed" id="doing-tab"  type="text" role="tab" aria-controls="doing" aria-selected="true" 
+            routerLink="/adminpage"><br><a>
+                <img
+                src="../../assets/icons/logs.png"
+                height="35"
+                width="35"
+                /> <b> VIEW LOGS</b></a></a>
+        </li>
+        <li class="nav-item" role="presentation">
+            <a class="nav-link colorAmber" id="done-tab" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
+                routerLink="/adminprogress"><br><a>
+                    <img
+                src="../../assets/icons/processing-times.png"
+                height="35"
+                width="35"
+                />
+                    
+                    <b> VIEW PROGRESS</b></a></a>
+        </li>
+
         
-        <div class="tab-content d-flex align-items-center justify-content-center float-start" id="myTabContent">
-            <div class="tab-pane fade show active" id="doing" role="tabpanel" aria-labelledby="doing-tab">
 
-               
-                <form class="w-100 rounded-1 p-4 border bg-white mt-0 mb-4 shadow-lg p-3 mb-5 bg-white 
-                            rounded row mx-0 justify-content-center col-md-8 col-lg-11 px-lg-2 col-xl-8
-                             px-xl-0 px-xxl-3" enctype="multipart/form-data">
+        <li class="nav-item" role="presentation">
+            <a class="nav-link colorAmber" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
+                routerLink="/generatereport"><br><a>
+                    <img
+                src="../../assets/icons/reports.png"
+                height="35"
+                width="35"
+                />
+                    <b> REPORT</b></a></a>
+
+        </li>
+
+        <li class="nav-item" role="presentation">
+            <a class="nav-link colorAmber" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
+                routerLink="/technician-table"><br><a>
+                    <img
+                src="../../assets/icons/list.png"
+                height="35"
+                width="35"
+                />
+                    <b> TABLE</b></a></a>
+
+        </li>
+
+      
+
+        <li class="nav-item" role="presentation">
+            <a class="nav-link colorAmber" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
+                routerLink="/admincloselog"><br><a>
+                    <img
+                src="../../assets/icons/document.png"
+                height="35"
+                width="35"
+                />
+                    <b> CLOSE LOG</b></a></a>
+
+        </li>
+
+    </ul>
+    
+    <div class="main">
+        <div class="tab-content d-flex align-items-center justify-content-center float-start" id="myTabContent">
+            <!-- <div class="tab-pane fade show active" id="doing" role="tabpanel" aria-labelledby="doing-tab"> -->
+
+                
+                <form class="w-95 rounded-1 p-2 border bg-white mt-0 mb-2 shadow-sm p-1 mb-3 bg-white rounded row mx-auto justify-content-center col-md-6 
+                        col-lg-9 px-lg-1 col-xl-7 px-xl-0 px-xxl-2" enctype="multipart/form-data">
                         <!--"form-row row" -->
                         <div class="reqhead1">Create new Technician</div>
                         <br><br>
@@ -55,7 +115,7 @@
                         <!-- <div *ngIf="userForm.controls ['id'].touched && userForm.controls['id'].invalid">
                             <span *ngIf="!tech_form.id" ['id'].errors['required']">This field is mandatory.</span>
                         </div> -->
-                       
+                        
                         <label for="name">Name : </label>
                         <input  type="text" class="form-control mb-2" id="name" name="tech_form.name" [(ngModel)]="tech_form.name"
                             placeholder="Enter your name"><br>
@@ -112,37 +172,15 @@
                         </select><br>
 
                         
-                      <input type="submit" (click)="submit_artisan()"(click)="openModal()" placeholder="Register">
+                        <input type="submit" (click)="submit_artisan()"(click)="openModal()" placeholder="Register">
                     </form>
                 
-            </div>
-        </div>
-
-        <!-- Modal -->
-      <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLongTitle">Request</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="close" (click)="doSomething()">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body" *ngIf="boolmsg" class="alert alert-success" role="alert">
-                <strong>{{successmsg}}</strong>
-            </div>
-            <div class="modal-footer" >
-              <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-              <button type="button" class="btn btn-primary" (click)="doSomething()"   id="close">OK</button>
-            </div>
-          </div>
+            <!-- </div> -->
         </div>
     </div>
+    
+
+</div>
 
 
-    </div>
-
-</body>
-<br><br><br><br><br><br><br>
-<footer>&copy; 2023 Informatics Community Engagement Project . All Rights Reserved <p></p>
-</footer>
+<app-footer></app-footer>
