--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -1,8 +1,8 @@
-<!-- <body class="cnavontainer"> -->
 
-    <app-adminnav></app-adminnav>
-    <br>
-    <br>
+
+<app-adminnav></app-adminnav>
+<div class="container2 d-flex justify-content-between ">
+   
     <ul class="nav nav-tabs flex-column justify-content-center" id="myTab" role="tablist" *ngIf="isScreenSizeLargerThanThreshold">
 
         <li class="nav-item" role="presentation"   >
@@ -24,24 +24,19 @@
                 /> <b> VIEW LOGS</b></a></a>
         </li>
 
-        <!-- <li class="nav-item" role="presentation" id="doing-tab3">
-            <a class="nav-link colorAmber" id="progress-tab" data-bs-toggle="tab" data-bs-target="#progress" type="text"
-                role="tab" aria-controls="progress" aria-selected="false"><br><a><b>View LOGS</b></a></a>
-
-        </li> -->
-
+       
+       
         <li class="nav-item" role="presentation">
-            <a class="nav-link" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
-                routerLink="/generatereport"><br><a>
+            <a class="nav-link colorAmber" id="done-tab" data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
+                routerLink="/adminprogress"><br><a>
                     <img
-                src="../../assets/icons/reports.png"
+                src="../../assets/icons/processing-times.png"
                 height="35"
                 width="35"
                 />
-                  <b> REPORT</b></a></a>
-
+                    
+                    <b> VIEW PROGRESS</b></a></a>
         </li>
-
         <li class="nav-item" role="presentation">
             <a class="nav-link " data-bs-toggle="tab" type="text" role="tab" aria-selected="false"
                 routerLink="/technician-table"><br><a>
@@ -79,120 +74,122 @@
   
     </ul>
 
-<div class="container">
-    
-        <br>
-        <br>
+    <div class="container">
+        
+        
+        <!-- <br> -->
         <div class="reqhead1" >REPORT</div>
+        <!-- <br>
+        <br> -->
+        <div class="Search-container">
+            <mat-form-field appearance="fill">
+                <input matInput placeholder="search" autocomplete="off" (keyup)="filterData($event)">
+            </mat-form-field>
+
+
+        </div>
+        <div>
+            &nbsp;&nbsp;<button mat-raised-button (click)="exporter.exportTable('xlsx')">.excel</button>
+            &nbsp;&nbsp;<button mat-raised-button (click)="exporter.exportTable('csv')">.csv</button>
+            &nbsp;&nbsp;<button mat-raised-button (click)="exporter.exportTable('json')">.json</button>
+            &nbsp;&nbsp;<button mat-raised-button (click)="exporter.exportTable('txt')">.txt</button>
+        </div>
         <br>
-        <br>
-    <div class="Search-container">
-        <mat-form-field appearance="fill">
-            <input matInput placeholder="search" autocomplete="off" (keyup)="filterData($event)">
-        </mat-form-field>
+
+        
+        <mat-paginator #paginator
+        [pageSize]="5"
+        [pageSizeOptions]="[2,5, 10, 25, 100]"
+        >
+        </mat-paginator>
+        <table mat-table matSort matTableExporter [dataSource]="dataSource" #exporter="matTableExporter" [hiddenColumns]="[0]" class="mat-elevation-z8 responsive-table" style="width: 50%">
+
+                
+            <ng-container matColumnDef="staff_id">
+                <th mat-header-cell mat-sort-header *matHeaderCellDef> Staff ID </th>
+                <td mat-cell *matCellDef="let element"> {{element.staff_id}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="id">
+                <th mat-header-cell mat-sort-header *matHeaderCellDef> Task Ref. </th>
+                <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="category">
+                <th mat-header-cell mat-sort-header *matHeaderCellDef> category </th>
+                <td mat-cell *matCellDef="let element"> {{element.category}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="priority">
+                <th mat-header-cell mat-sort-header *matHeaderCellDef> priority </th>
+                <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="progress">
+                <th mat-header-cell mat-sort-header *matHeaderCellDef> progress </th>
+                <td mat-cell *matCellDef="let element"> {{element.progress}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="req_date">
+                <th mat-header-cell mat-sort-header *matHeaderCellDef> Request Date </th>
+                <td mat-cell *matCellDef="let element"> {{element.req_date}} </td>
+            </ng-container>
 
 
-    </div>
-    <div>
-        &nbsp;&nbsp;<button mat-raised-button (click)="exporter.exportTable('xlsx')">.excel</button>
-        &nbsp;&nbsp;<button mat-raised-button (click)="exporter.exportTable('csv')">.csv</button>
-        &nbsp;&nbsp;<button mat-raised-button (click)="exporter.exportTable('json')">.json</button>
-        &nbsp;&nbsp;<button mat-raised-button (click)="exporter.exportTable('txt')">.txt</button>
-    </div>
-    <br>
 
-    
-    <mat-paginator #paginator
-    [pageSize]="5"
-    [pageSizeOptions]="[2,5, 10, 25, 100]"
-    >
-    </mat-paginator>
-    <table mat-table matSort matTableExporter [dataSource]="dataSource" #exporter="matTableExporter" [hiddenColumns]="[0]" class="mat-elevation-z8" style="width: 50%">
+            <ng-container matColumnDef="assigned_date">
+                <th mat-header-cell mat-sort-header *matHeaderCellDef>Date Assigned </th>
+                <td mat-cell *matCellDef="let element"> {{element.assigned_date}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="completed_date">
+                <th mat-header-cell mat-sort-header *matHeaderCellDef>Date Completed </th>
+                <td mat-cell *matCellDef="let element"> {{element.completed_date}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="description">
+                <th mat-header-cell mat-sort-header *matHeaderCellDef> description </th>
+                <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+            </ng-container>
+
+
+            <ng-container matColumnDef="venue">
+                <th mat-header-cell mat-sort-header *matHeaderCellDef> Venue </th>
+                <td mat-cell *matCellDef="let element"> {{element.venue}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="staff_feedback">
+                <th mat-header-cell mat-sort-header *matHeaderCellDef> Staff Feedback </th>
+                <td mat-cell *matCellDef="let element"> {{element.staff_feedback}} </td>
+            </ng-container>
+
+            <!-- <ng-container matColumnDef="tech_feedback">
+                <th mat-header-cell mat-sort-header *matHeaderCellDef> Tech Feedback </th>
+                <td mat-cell *matCellDef="let element"> {{element.tech_feedback}} </td>
+            </ng-container> -->
+
+            <ng-container matColumnDef="status">
+                <th mat-header-cell mat-sort-header *matHeaderCellDef> Task Status </th>
+                <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+            </ng-container>
+            
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
             
-        <ng-container matColumnDef="staff_id">
-            <th mat-header-cell mat-sort-header *matHeaderCellDef> Staff ID </th>
-            <td mat-cell *matCellDef="let element"> {{element.staff_id}} </td>
-        </ng-container>
 
-        <ng-container matColumnDef="id">
-            <th mat-header-cell mat-sort-header *matHeaderCellDef> Task Ref. </th>
-            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-        </ng-container>
+        </table>
 
-        <ng-container matColumnDef="category">
-            <th mat-header-cell mat-sort-header *matHeaderCellDef> category </th>
-            <td mat-cell *matCellDef="let element"> {{element.category}} </td>
-        </ng-container>
+            
 
-        <ng-container matColumnDef="priority">
-            <th mat-header-cell mat-sort-header *matHeaderCellDef> priority </th>
-            <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
-        </ng-container>
 
-        <ng-container matColumnDef="progress">
-            <th mat-header-cell mat-sort-header *matHeaderCellDef> progress </th>
-            <td mat-cell *matCellDef="let element"> {{element.progress}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="req_date">
-            <th mat-header-cell mat-sort-header *matHeaderCellDef> Request Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.req_date}} </td>
-        </ng-container>
+            
 
 
 
-        <ng-container matColumnDef="assigned_date">
-            <th mat-header-cell mat-sort-header *matHeaderCellDef>Date Assigned </th>
-            <td mat-cell *matCellDef="let element"> {{element.assigned_date}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="completed_date">
-            <th mat-header-cell mat-sort-header *matHeaderCellDef>Date Completed </th>
-            <td mat-cell *matCellDef="let element"> {{element.completed_date}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="description">
-            <th mat-header-cell mat-sort-header *matHeaderCellDef> description </th>
-            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-        </ng-container>
-
-
-        <ng-container matColumnDef="venue">
-            <th mat-header-cell mat-sort-header *matHeaderCellDef> Venue </th>
-            <td mat-cell *matCellDef="let element"> {{element.venue}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="staff_feedback">
-            <th mat-header-cell mat-sort-header *matHeaderCellDef> Staff Feedback </th>
-            <td mat-cell *matCellDef="let element"> {{element.staff_feedback}} </td>
-        </ng-container>
-
-        <!-- <ng-container matColumnDef="tech_feedback">
-            <th mat-header-cell mat-sort-header *matHeaderCellDef> Tech Feedback </th>
-            <td mat-cell *matCellDef="let element"> {{element.tech_feedback}} </td>
-        </ng-container> -->
-
-        <ng-container matColumnDef="status">
-            <th mat-header-cell mat-sort-header *matHeaderCellDef> Task Status </th>
-            <td mat-cell *matCellDef="let element"> {{element.status}} </td>
-        </ng-container>
-        
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-        
-
-     </table>
-
-        
-
-
-        
-
-
-
+    </div>
 </div>
+
 <app-footer></app-footer>
 
 
