--- a/src/app/techpage/techpage.component.css
+++ b/src/app/techpage/techpage.component.css
@@ -5,74 +5,7 @@ body {
     margin: 10.8%;
   }
   /* Start of the navigation bar*/
-  .header {
-    height: 82px;
-    background: #0c0c0c;
-    width: 100%;
-    margin: 0;
-    position: fixed;
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 20px;
-    display: flex;
-    justify-content: space-between;
-    padding:0 16px 0 0;
-    box-sizing: border-box;
-    z-index: 100;
-  }
-  .header a {
-    padding: 0 32px;
-    color: #eee;
-    transition: 0.4s;
-  }
-  .header a:hover {
-    text-decoration: none;
-    color: red;
-  }
-  .header ul {
-    display: flex;
-    list-style: none;
-    justify-content: space-around;
-    align-items: center;
-    height: 100%;
-    margin: 0;
-  }
-  #logoDiv{
-  
-    margin-left: 1%;
-    margin-top: 7.2px;
-  
-  }
-  
-  /*logout button*/
-  .btn-success{
-    color: white;
-    border: 2px solid white;
-    height: 40px;
-    background-color: #005596;
-  }
-  .btn-success:active{
-    border: white;
-    background-color: #005596;
-  }
-  /* End of the navigation bar*/
-  /* Start of  Everything on the side nav*/
-  .sideNav {
-    float: left;
-   
-    box-shadow: 5px 0 2px #969292;
-    width: 335px;
-    height: 1055px;
-    
-  }
-  .breadcrumbNav {
-    margin: 12% 10px;
-    padding: 20px 30px;      
-  }
-  #breadcrumbpadding {
-  
-    width: 120px;  
-    padding: 6px 0;
-  }
+ 
   a {
     padding-top: 20px;
     font-style: normal;
@@ -85,14 +18,7 @@ body {
     color: #005596;
     text-decoration: none;
   }
-  .breadcrumbNav ul {
-    list-style:none ;
-    flex-direction: column;
-  }
-  .breadcrumb-item.active {
-    border-bottom: 3px solid #005596;
-    width: 115px;  
-  }
+  
   /* End of Everything on the side nav*/
   
   /*Disable the active link*/
@@ -127,67 +53,11 @@ body {
   }
   /*Div for the content on the right*/
   .tab-content {
-      float: right;
-      width: 80%;
+      /* float: right; */
+      width: 100%;
       margin-right: 0%;
     }
-    /*Footer*/
-  footer{
-      background: black;
-      padding: 8px;
-      color: #eee;
-      text-align: center;
-      margin-left: 0%;
-      margin-top: auto;
-      width: 100%;
-      height: 40px;
-      /* position: absolute; */
-      /* bottom: 0;
-      width: 100%; */
-    }
-    
-    
-    
-    /*Navigation*/
-  /*   
-    nav {
-      height: 72px;
-      background: #0c0c0c;
-      width: 100%;
-      margin: 0;
-      position: fixed;
-      font-family: 'Roboto Condensed',sans-serif;
-      font-size: 20px;
-      display: flex;
-      justify-content: space-between;
-      padding:0 16px 0 0;
-      box-sizing: border-box;
-      z-index: 100;
-    }
-    
-    nav a {
-      padding: 0 32px;
-      color: #eee;
-      transition: 0.4s;
-    }
-    
-    nav a:hover {
-      text-decoration: none;
-      color: red;
-    }
-    
-    nav ul {
-      display: flex;
-      list-style: none;
-      justify-content: space-around;
-      align-items: center;
-      height: 100%;
-      margin: 0;
-    }
-    
-    .active {
-      color:#0e0d0d;
-    } */
+  
   .table {
       width: 90%;
       margin: auto auto;
@@ -199,7 +69,7 @@ body {
     }
   .content{
     border: 1px solid #ccc;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
     height: auto; 
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
     padding: 20px;
