--- a/src/app/track-request/track-request.component.html
+++ b/src/app/track-request/track-request.component.html
@@ -1,4 +1,26 @@
- 
+<div class="modal fade" id="staffpop" [ngClass]="{ 'show': showModal }" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle"><img src="../../assets/icons/icons8-alert.gif"/>  New Task Alert</h5>
+          <button type="button" class="close" data-dismiss="modal" (click)="closeStaffModal()" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body"  class="alert alert-success" role="alert">
+            <h3 >Progress :{{progress}} </h3>
+				<h3 >Description :{{description}} </h3>
+				<h3 >expected Date :{{expected_date}} </h3>
+        <h3 >Priority :{{priority}} </h3>
+        <h3 >Assigned Date :{{assigned_date}} </h3>
+        </div>
+        <div class="modal-footer" >
+          <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+          <button type="button" class="btn btn-primary" (click)="closeStaffModal()" >OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
 <app-staff-navbar></app-staff-navbar>
 
 <!-- <body> -->
